vlib/v/checker/tests/sumtype_circular_reference_err.vv
type Type6 = Type7 | int
type Type7 = Type6 | string

struct Foo {
	name Type7
}
